--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@supabase/supabase-js": "^2.48.1",
     "@vercel/postgres": "^0.10.0",
     "next": "15.1.7",
     "react": "^19.0.0",
